--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -10,10 +10,39 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/logo"></ImageView>
+            android:id="@+id/qr_code"
+            android:layout_marginTop="50dp"></ImageView>
+
+        <TextView
+            android:layout_marginTop="50dp"
+            android:background="#e0000000"
+            android:layout_width="250dp"
+            android:textColor="@android:color/white"
+            android:layout_height="wrap_content"
+            android:text="正在下雨，出门记得带伞哦~"
+            android:textSize="20dp"
+            android:padding="20dp"
+            android:layout_gravity="center"
+            android:id="@+id/tv1"
+            />
+
+        <TextView
+            android:layout_marginTop="50dp"
+            android:background="#e0000000"
+            android:padding="20dp"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:text="清晨的凉意需要件厚实的外套来低于萧瑟哦~"
+            android:textSize="20dp"
+            android:layout_gravity="center"
+            android:id="@+id/tv2"
+            />
+
     </LinearLayout>
 
 
