--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -4,13 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <ListView
-        android:id="@+id/ListItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp">
-
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:id="@+id/lv">
     </ListView>
 
 </FrameLayout>
